[gd_scene load_steps=14 format=3 uid="uid://b30q37jguwlek"]

[ext_resource type="Script" path="res://Main/Shop/ShopScene.gd" id="1_pnct4"]
[ext_resource type="PackedScene" uid="uid://dl756gys3wbma" path="res://UI/Closet/Closet.tscn" id="2_sf3t0"]
[ext_resource type="PackedScene" uid="uid://38p37nklc2cj" path="res://Manager/OrderManager.tscn" id="3_am2ce"]
[ext_resource type="PackedScene" uid="uid://ddt7va66cy1mx" path="res://DataTypes/Storage.tscn" id="3_cbyd5"]
[ext_resource type="PackedScene" uid="uid://dctd4p2s02lu8" path="res://UI/Shadometer/Shadometer.tscn" id="4_e7eu6"]
[ext_resource type="PackedScene" uid="uid://jfwvhdbe2n2k" path="res://Manager/DudeManager.tscn" id="5_ojv5s"]
[ext_resource type="PackedScene" uid="uid://bed8bleqgeosy" path="res://UI/Shelves/Shelves.tscn" id="6_g07xb"]
[ext_resource type="PackedScene" uid="uid://enawlhjqmymv" path="res://UI/Runners/Runner.tscn" id="8_r1um1"]
[ext_resource type="Script" path="res://DataTypes/Ingredients/Ingredient.gd" id="9_xk6bq"]

[sub_resource type="Resource" id="Resource_a8vn6"]
resource_local_to_scene = true
script = ExtResource("9_xk6bq")
Name = "Death Petal"
ID = 3
imgRect = "res://assets/ingredients/death_petal.png"

[sub_resource type="Resource" id="Resource_mrdlx"]
resource_local_to_scene = true
script = ExtResource("9_xk6bq")
Name = "Ectoplasm"
ID = 0
imgRect = "res://assets/ingredients/ectoplasm.png"

[sub_resource type="Resource" id="Resource_wockh"]
resource_local_to_scene = true
script = ExtResource("9_xk6bq")
Name = "Fang"
ID = 2
imgRect = "res://assets/ingredients/fang.png"

[sub_resource type="Resource" id="Resource_bxqbu"]
resource_local_to_scene = true
script = ExtResource("9_xk6bq")
Name = "Toxin"
ID = 1
imgRect = "res://assets/ingredients/toxin.png"

[node name="ShopScene" type="Node"]
script = ExtResource("1_pnct4")

[node name="ProcessingNodes" type="Node" parent="."]

[node name="Storage" parent="ProcessingNodes" instance=ExtResource("3_cbyd5")]

[node name="UINodes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Closet" parent="UINodes" instance=ExtResource("2_sf3t0")]
layout_mode = 2
anchor_left = 0.0104167
anchor_top = 0.00925926
anchor_right = 0.0286457
anchor_bottom = 0.677469
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="Shadometer" parent="UINodes" instance=ExtResource("4_e7eu6")]
layout_mode = 2
anchor_left = 0.949653
anchor_top = 0.037037
anchor_right = 0.949653
anchor_bottom = 0.037037
offset_left = -72.0
offset_right = 40.0
offset_bottom = 36.0
size_flags_horizontal = 8
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="OrderManager" parent="UINodes" instance=ExtResource("3_am2ce")]
layout_mode = 0
offset_left = 605.0
offset_top = 257.0
offset_right = 1074.0
offset_bottom = 447.0

[node name="Shelves" parent="UINodes" instance=ExtResource("6_g07xb")]
layout_mode = 0
offset_left = 619.0
offset_top = 49.0
offset_right = 929.0
offset_bottom = 167.0

[node name="2DNodes" type="Node2D" parent="."]

[node name="DudeManager" parent="2DNodes" node_paths=PackedStringArray("introductionPoint") instance=ExtResource("5_ojv5s")]
textureDirectory = "res://assets/dudes"
orderDirectory = "res://Data/Orders"
namesFilePath = "res://assets/NamesList.txt"
introductionPoint = NodePath("../IntroductionPoint")

[node name="IntroductionPoint" type="Node2D" parent="2DNodes"]
position = Vector2(412, 488)

[node name="Runner" parent="2DNodes" instance=ExtResource("8_r1um1")]
position = Vector2(1, 421)

[node name="btnRequestDeathPetal" parent="2DNodes/Runner/RequestButtonGrid" index="0"]
ingredient = SubResource("Resource_a8vn6")

[node name="btnRequestEctoplasm" parent="2DNodes/Runner/RequestButtonGrid" index="1"]
ingredient = SubResource("Resource_mrdlx")

[node name="btnRequestFang" parent="2DNodes/Runner/RequestButtonGrid" index="2"]
ingredient = SubResource("Resource_wockh")

[node name="btnRequestToxin" parent="2DNodes/Runner/RequestButtonGrid" index="3"]
ingredient = SubResource("Resource_bxqbu")

[connection signal="shop_devoured" from="UINodes/Closet" to="." method="_on_closet_shop_devoured"]
[connection signal="released_ingredient" from="UINodes/Shelves" to="." method="_on_shelves_released_ingredient"]
[connection signal="dude_spawned" from="2DNodes/DudeManager" to="UINodes/OrderManager" method="_on_dude_manager_dude_spawned"]
[connection signal="mission_complete" from="2DNodes/Runner" to="ProcessingNodes/Storage" method="_on_runner_mission_complete"]
[connection signal="timeout" from="2DNodes/Runner/MissionTimer" to="ProcessingNodes/Storage" method="_on_mission_timer_timeout"]

[editable path="UINodes/Closet"]
[editable path="2DNodes/Runner"]
